# AlphaEngine

./: .env.example  .gitignore  AlphaEngine系统架构图.mmd  README.md  pyproject.toml  start.py
app/: __init__.py  main.py  runtime.py
app/acp/: __init__.py  bus.py  message.py
app/agents/: __init__.py  ai_advisor.py  allocation.py  base.py  compliance.py  coordinator.py  market.py  returns.py  risk.py
app/api/: routes.py
app/core/: __init__.py  config.py  local_config.py
app/domain/: __init__.py  schemas.py
app/services/: __init__.py  ai_advisor.py  market_data.py
app/static/: app.js  index.html  styles.css
tests/: test_agents.py  test_ai_advisor.py  test_ai_collaboration.py  test_frontend.py  test_market_data.py  test_settings.py  test_start.py
